--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5683,6 +5683,8 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -BUG FIX: Fixed support for using the internal built-in REST API on Desktop Editions 
 
+-BUG FIX: Fixed CSV (spreadsheet) exporting of portfolio data
+
 -'Secure' cookies configuration added FOR SERVER EDITIONS (only allowed to be sent over a secure HTTPS connection...just click 'Save Updated Settings' on the Settings page, WITH COOKIES ENABLED)
 
 -New admin security level feature (if end-users prefer editing all config files manually, to avoid the need to display setting values in the admin interface pages)
