--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5832,11 +5832,11 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 -------------------------------------------------------------------
 6.00.10:
 
--BUG FIX: (still dev-pre, no bug found yet to trigger a release)
+-BUG FIX: Fixes AND better user experience running "ADD-WIN10-SCHEDULER-JOB.bat" to create a scheduled background task on Windows
 
 -Better user experience during import / restore of large price chart data sets (on low power AND high power devices...multiplies the "light_chart_first_build_hard_limit" value set in the developer config section, by the number of CPU cores IF detected) 
 
--Better user experience running "ADD-WIN10-SCHEDULER-JOB.bat" to create a scheduled background task on Windows
+-Support for global stock market spot price / volume (via the Alpha Vantage stock API)
 
 -Documentation additions / revisions
 
