new 'external api' config section, optimized new throttle-limiting feature for external APIs that have minute / daily limits
new 'external api' config section, optimized new throttle-limiting feature for external APIs that have minute / daily limits

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5846,6 +5846,8 @@ v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIM
 
 -Stock related News Feeds added to News page's demo config
 
+-New 'External API' section in admin area / config.php
+
 -Miscellaneous revised DEMO configuration
 
 -Documentation additions / revisions
